--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 				    <label>Biografi:</label>
 					<textarea class="form-control" id="biografi" name="biografi"></textarea><br />
 				</div>
-		        <input type="button" value="Daftar" onclick="daftarData();" class="btn btn-success btn-small" />
+		        <input type="button" value="Daftar" onclick="simpanDaftar();" class="btn btn-success btn-small" />
                 <input type="reset" value="Reset" onclick="" class="btn btn-warning btn-small" />
             </form>
         </div>
@@ -83,7 +83,7 @@
 				    <label>Biografi:</label>
                     <textarea class="form-control" id="ebiografi" name="biografi"></textarea><br />
 				</div>
-                <input type="button" value="Daftar" onclick="daftarEditData();" class="btn btn-success btn-small" />
+                <input type="button" value="Daftar" onclick="simpanEditData();" class="btn btn-success btn-small" />
                 <input type="reset" value="Reset" onclick="" class="btn btn-warning btn-small" />
                 <input type="button" value="Cancel" onclick="gantiMenu('list-daftar');"
                     class="btn btn-warning btn-small" />
