--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
                 </div>
                 <div id="jeniskelamin-group" class="form-group">
                     <label>Jenis Kelamin:</label>
-                    <label><input type="radio" class="form-control" id="jeniskelaminlakilaki" name="jeniskelaminlakilaki" value="laki-laki"/>Laki-Laki</label>
-                    <label><input type="radio" class="form-control" id="jeniskelaminperempuan" name="jeniskelaminperempuan" value="perempuan"/>Perempuan</label>
+                    <label><input type="radio" class="form-control" id="jeniskelamin" name="jeniskelamin" value="laki-laki"/>Laki-Laki</label>
+                    <label><input type="radio" class="form-control" id="jeniskelamin" name="jeniskelamin" value="perempuan"/>Perempuan</label>
                 </div>
 				<div id="biografi-group" class="form-group">
 				    <label>Biografi:</label>
@@ -76,8 +76,8 @@
                 </div>
 				<div id="jeniskelamin-group" class="form-group">
                     <label>Jenis Kelamin:</label>
-                    <label><input type="radio" class="form-control" id="ejeniskelaminlakilaki" name="jeniskelaminlakilaki" value="laki-laki"/>Laki-Laki</label>
-                    <label><input type="radio" class="form-control" id="ejeniskelaminperempuan" name="jeniskelaminperempuan" value="perempuan"/>Perempuan</label>
+                    <label><input type="radio" class="form-control" id="ejeniskelamin" name="jeniskelamin" value="laki-laki"/>Laki-Laki</label>
+                    <label><input type="radio" class="form-control" id="ejeniskelamin" name="jeniskelamin" value="perempuan"/>Perempuan</label>
                 </div>
 				<div id="biografi-group" class="form-group">
 				    <label>Biografi:</label>
@@ -109,8 +109,8 @@
                 </div>
 				<div id="jeniskelamin-group" class="form-group">
                     <label for="disabled">Jenis Kelamin:</label>
-                    <label><input type="radio" class="form-control" id="ljeniskelaminlakilaki" name="jeniskelaminlakilaki" value="laki-laki" disabled>Laki-Laki</label>
-                    <label><input type="radio" class="form-control" id="ljeniskelaminperempuan" name="jeniskelaminperempuan" value="perempuan" disabled>Perempuan</label>
+                    <label><input type="radio" class="form-control" id="ljeniskelamin" name="jeniskelamin" value="laki-laki" disabled>Laki-Laki</label>
+                    <label><input type="radio" class="form-control" id="ljeniskelamin" name="jeniskelamin" value="perempuan" disabled>Perempuan</label>
                 </div>
 				<div id="biografi-group" class="form-group">
 				    <label for="disabled">Biografi:</label>
