--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
                 </div>
                 <div id="jeniskelamin-group" class="form-group">
                     <label>Jenis Kelamin:</label>
-                    <label><input type="radio" class="form-control" id="jeniskelamin" value="laki-laki"/>Laki-Laki</label>
-                    <label><input type="radio" class="form-control" id="jeniskelamin" value="perempuan"/>Perempuan</label>
+                    <label><input type="radio" class="form-control" id="jeniskelamin" value="laki-laki">Laki-Laki</label>
+                    <label><input type="radio" class="form-control" id="jeniskelamin" value="perempuan">Perempuan</label>
                 </div>
 				<div id="biografi-group" class="form-group">
 				    <label>Biografi:</label>
@@ -76,8 +76,8 @@
                 </div>
 				<div id="jeniskelamin-group" class="form-group">
                     <label>Jenis Kelamin:</label>
-                    <label><input type="radio" class="form-control" id="ejeniskelamin" value="laki-laki"/>Laki-Laki</label>
-                    <label><input type="radio" class="form-control" id="ejeniskelamin" value="perempuan"/>Perempuan</label>
+                    <label><input type="radio" class="form-control" id="ejeniskelamin" value="laki-laki">Laki-Laki</label>
+                    <label><input type="radio" class="form-control" id="ejeniskelamin" value="perempuan">Perempuan</label>
                 </div>
 				<div id="biografi-group" class="form-group">
 				    <label>Biografi:</label>
