--- a/public/index.html
+++ b/public/index.html
@@ -43,10 +43,9 @@
                     <label>Agama:</label>
                     <input type="text" class="form-control" id="agama" name="agama">
                 </div>
-                <div id="jeniskelamin-group" class="form-group">
+				<div id="jeniskelamin-group" class="form-group">
                     <label>Jenis Kelamin:</label>
-                    <label><input type="radio" class="form-control" id="jeniskelamin" value="laki-laki">Laki-Laki</label>
-                    <label><input type="radio" class="form-control" id="jeniskelamin" value="perempuan">Perempuan</label>
+                    <input type="text" class="form-control" id="jeniskelamin" name="jeniskelamin">
                 </div>
 				<div id="biografi-group" class="form-group">
 				    <label>Biografi:</label>
@@ -76,8 +75,7 @@
                 </div>
 				<div id="jeniskelamin-group" class="form-group">
                     <label>Jenis Kelamin:</label>
-                    <label><input type="radio" class="form-control" id="ejeniskelamin" value="laki-laki">Laki-Laki</label>
-                    <label><input type="radio" class="form-control" id="ejeniskelamin" value="perempuan">Perempuan</label>
+                    <input type="text" class="form-control" id="ejeniskelamin" name="jeniskelamin">
                 </div>
 				<div id="biografi-group" class="form-group">
 				    <label>Biografi:</label>
@@ -109,8 +107,7 @@
                 </div>
 				<div id="jeniskelamin-group" class="form-group">
                     <label for="disabled">Jenis Kelamin:</label>
-                    <label><input type="radio" class="form-control" id="ljeniskelamin" value="laki-laki" disabled>Laki-Laki</label>
-                    <label><input type="radio" class="form-control" id="ljeniskelamin" value="perempuan" disabled>Perempuan</label>
+                    <input type="text" class="form-control" id="ljeniskelamin" name="jeniskelamin" disabled>
                 </div>
 				<div id="biografi-group" class="form-group">
 				    <label for="disabled">Biografi:</label>
