--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
             </form>
         </div>
         <div id="list-daftar" class="well">
-            Pilih menu List Daftar untuk melihat pendaftaran yang sudah di input.
+            Pilih menu List Registrasi untuk melihat pendaftaran yang sudah di input.
         </div>
         <!--Konten LIFF v2-->
         <div id="liffAppContent">
